--- a/scss/0.base/_3.variables.scss
+++ b/scss/0.base/_3.variables.scss
@@ -22,5 +22,24 @@ $colors: (
   header-top-button-nav-hover-off: #343645,
   header-top-button-nav-hover-on: #21242e,
   //
+  // Nav Bar & Item's Icons
   //
+  nav-bar-background: #343645,
+  bespoke-software-icon: #67809f,
+  it-support-icon: #4183d7,
+  digital-marketing-icon: #2ecc71,
+  telecoms-services-icon: #d64542,
+  web-design-icon: #9270b1,
+  cyber-security-icon: #f6255a,
+  developer-course-icon: #cf4126,
+  //
+  // Nav Items Hover
+  //
+  bespoke-software-hover: #67809f,
+  it-support-hover: #4183d7,
+  digital-marketing-hover: #2ecc71,
+  telecoms-services-hover: #d64541,
+  web-design-hover: #926fb1,
+  cyber-security-hover: #f62459,
+  developer-course-hover: #ce4126
 );
