--- a/scss/0.base/_4.functions.scss
+++ b/scss/0.base/_4.functions.scss
@@ -31,3 +31,9 @@
 @function px-to-pc($target, $context: $max-width) {
   @return ($target / $context) * 100%;
 }
+
+// Get colors
+
+@function color($color) {
+  @return map-get($colors, $color);
+}
