--- a/css/main.css
+++ b/css/main.css
@@ -366,10 +366,14 @@ body {
 .nav-item--bespoke:hover::after, .nav-item--it-support:hover::after, .nav-item--digital-marketing:hover::after, .nav-item--telecoms-services:hover::after, .nav-item--web-design:hover::after, .nav-item--cyber-security:hover::after, .nav-item--developer-course:hover::after {
   content: "";
   position: absolute;
-  bottom: -43px;
-  left: 0;
-  width: 100%;
-  height: 43px;
+  left: 50%;
+  bottom: -35px;
+  transform: translateX(-50%);
+  z-index: 90;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 35px 83.5px 0;
   clip-path: polygon(50% 100%, 0 0, 100% 0); }
 
 #header-top {
