--- a/scss/0.base/_7.extends.scss
+++ b/scss/0.base/_7.extends.scss
@@ -1,10 +1,14 @@
 %nav-item-triangle {
   content: "";
   position: absolute;
-  bottom: -43px;
-  left: 0;
-  width: 100%;
-  height: 43px;
+  left: 50%;
+  bottom: -35px;
+  transform: translateX(-50%);
+  z-index: 90;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 35px 83.5px 0;
   clip-path: polygon(50% 100%, 0 0, 100% 0);
 }
 
