--- a/scss/2.header/_3.submenu.scss
+++ b/scss/2.header/_3.submenu.scss
@@ -5,7 +5,7 @@
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: #67809f;
+  background-color: black;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
