added icons html and placeholders in css, also moved the grid template areas into the css

--- a/scss/0.base/_2.fonts.scss
+++ b/scss/0.base/_2.fonts.scss
@@ -41,6 +41,9 @@ $font-icons: (
   code: "\eA80",
   shield: "\e903",
   diploma-hat: "\e902",
+  // Bespoke submenu
+  cogs: "\e90C",
+  mobile: "\e958",
   //
   quote-bubble: "\e905",
   shuffle-arrows: "\e908",
@@ -48,7 +51,7 @@ $font-icons: (
   //
   globe: "\e90A",
   cloud-download: "\e90B",
-  cogs: "\e90C",
+
   briefcase: "\e90D",
   laptop: "\e90E",
   group: "\e90F",
@@ -74,8 +77,6 @@ $font-icons: (
   folder: "\e930",
   ticket: "\e939",
   phone: "\e942",
-
-  mobile: "\e958",
 
   cloud: "\e9C1",
   download-server-box: "\e9C7",
