--- a/css/main.css
+++ b/css/main.css
@@ -587,7 +587,7 @@ body {
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: black;
+  background-color: red;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1; }
 
@@ -611,5 +611,349 @@ body {
   padding: 10px;
   border-radius: 5px;
   color: white; }
+
+.icon__bespoke-software-submenu--crm {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--crm:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--mobile-app {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--mobile-app:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--operational-systems {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--operational-systems:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--intranet {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--intranet:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--automation {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--automation:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--databases {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--databases:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--implementation {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--implementation:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--portal {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--portal:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--integrations {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--integrations:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--sharepoint {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--sharepoint:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--iot {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--iot:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__bespoke-software-submenu--reporting {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__bespoke-software-submenu--reporting:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--managed-it {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--managed-it:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--business-it {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--business-it:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--office-365 {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--office-365:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--cloud {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--cloud:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--backup {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--backup:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__it-support-submenu--consultancy {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__it-support-submenu--consultancy:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--seo {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--seo:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--ppc {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--ppc:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--cro {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--cro:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--email {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--email:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--social-media {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--social-media:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__digital-marketing-submenu--content {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__digital-marketing-submenu--content:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--business-mobile {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--business-mobile:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--hosted-voip {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--hosted-voip:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--business-voip {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--business-voip:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--business-broadband {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--business-broadband:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--leased-lines {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--leased-lines:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__telecoms-services-submenu--3cx {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__telecoms-services-submenu--3cx:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--bespoke-website {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--bespoke-website:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--ecommerce-website {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--ecommerce-website:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--pay-monthly-websites {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--pay-monthly-websites:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--branding-design {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--branding-design:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--mobile-app {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--mobile-app:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__web-design-submenu--web-hosting {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__web-design-submenu--web-hosting:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--assessment {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--assessment:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--management {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--management:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--penetration-testing {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--penetration-testing:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--essentials-certification {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--essentials-certification:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--pci-compliance {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--pci-compliance:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__cyber-security-submenu--hacking-prevention {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__cyber-security-submenu--hacking-prevention:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__developer-course-submenu--train-for-career {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__developer-course-submenu--train-for-career:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__developer-course-submenu--skills-bootcamp {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__developer-course-submenu--skills-bootcamp:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__developer-course-submenu--scion-faq {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__developer-course-submenu--scion-faq:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+.icon__developer-course-submenu--scion-collaborators {
+  font-family: "icomoon" !important;
+  font-size: 1.438rem; }
+  .icon__developer-course-submenu--scion-collaborators:before {
+    content: "";
+    display: inline-block;
+    transform: translateY(10px); }
+
+#bespoke-software-grid {
+  grid-template-areas: "heading heading heading" "crm automation integrations" "mobile-app databases sharepoint" "operational-systems implementation iot" "intranet portal reporting"; }
+
+#it-support-grid {
+  grid-template-areas: "heading heading heading" "managed-it business-it office-365" "consultancy cloud backup"; }
+
+#digital-marketing-grid {
+  grid-template-areas: "heading heading heading" "seo ppc cro" "email social-media content"; }
+
+#telecoms-services-grid {
+  grid-template-areas: "heading heading heading" "business-mobile hosted-voip business-voip" "business-broadband leased-lines 3cx"; }
+
+#web-design-grid {
+  grid-template-areas: "heading heading heading" "bespoke-website ecommerce-website pay-monthly-websites" "branding-design mobile-app web-hosting"; }
+
+#cyber-security-grid {
+  grid-template-areas: "heading heading heading" "assessment management penetration-testing" "essentials-certification pci-compliance hacking-prevention"; }
+
+#developer-course-grid {
+  grid-template-areas: "heading heading heading" "train-for-career skills-bootcamp scion-faq" "scion-collaborators scion-collaborators scion-collaborators"; }
 
 /*# sourceMappingURL=main.css.map */
